backapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp
  labels:
    homework: backapp
    training: block3
spec:
  selector:
    homework: backapp
    training: block3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
